BugzID: 3821 - Children's Theater Festival Bug Fixes
Fixed mobile navigation so it doesn't cover the whole header
Fixed width of frog on smaller layouts so he shows up and isn't hidden anymore.

--- a/app/assets/stylesheets/skins/pghkids/contexts/homepage.scss
+++ b/app/assets/stylesheets/skins/pghkids/contexts/homepage.scss
@@ -25,10 +25,12 @@ section.homepage {
     }
 
     .home-header {
+      padding: 0.5em;
       display: flex;
       flex-flow: row wrap;
       .welcome-image {
         height: 65px;
+        width: 30%;
         background: url(frog_mobile.png) no-repeat;
         // @include column()
         @include breakpoint($breakpoint-xl) {
